--- a/themes/github-style-modified/config.toml
+++ b/themes/github-style-modified/config.toml
@@ -15,10 +15,10 @@ pygmentsUseClasses = true
 #  linkedin = "MeiK2333"
 #  instagram = "MeiK2333"
 #  tumblr = "MeiK2333"
-  email = "oiznccun@protonmail.com"
+  email = "amcjedhfeh@gmail.com.com"
   url = "https://hatateaya.github.io"
   keywords = "blog"
-  rss = true
+  rss = false
   lastmod = true
   favicon = "/images/github.png"
 #  location = "China"
