--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://hatateaya.github.io/'
 languageCode = 'zh-cn'
 title = 'Blog of HatateAya'
-theme = "github-style-modified"
+theme = "nosytleplease"
