--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -8,8 +8,8 @@ title = "info"
   title = "content licence: cc-by-sa 4.0"
   
   [[entries.entries]]
-  title = "github"
-  url = "https://github.com/hatateaya"
+  title = "about me"
+  url = "/aboutme/"
 
 #  [[entries.entries]]
 #  title = "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
