--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://hatateaya.pages.dev/'
+baseURL = 'https://hatateaya.github.io/'
 languageCode = 'en-us'
 title = '橄榄菜'
 theme = 'nostyleplease'
