--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -2,7 +2,7 @@
 title = "info"
 
   [[entries.entries]]
-  title = "a person."
+  title = "a person"
   
   [[entries.entries]]
   title = "content licence: cc-by-sa 4.0"
