add friendlink and modify drughal's format

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -29,6 +29,10 @@ title = "all posts"
 #  show_more_url = "posts"
 
 [[entries]]
+title = "friendlinks"
+url = "/friendlinks/"
+
+[[entries]]
 title = "rss"
 url = "index.xml"
 
